[package]
name = "array-matrix"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Treats two-dimensional arrays as matrices and introduces matrix operations"
repository = "https://github.com/sigurd4/array-matrix"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"
array-init = "2.0.1"
num-complex = "0.4.2"